2005-09-26  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Added bug 4599 and 4602 to the 1.0.2 roadmap.

2005-09-26  Tor Lillqvist  <tml@novell.com>

	* src/cairo-win32-font.c (_win32_scaled_font_get_scaled_hfont),
	(_win32_scaled_font_get_unscaled_hfont): Set LOGFONT::lfHeight
	negative. A negative lfHeight means "em height" which is what we
	want, and matches how other toolkits interpret font sizes on
	Win32. (Positive lfHeight means "cell height".) (#4593)
	(_cairo_win32_scaled_font_init_glyph_metrics): If
	GetGlyphOutlineW() fails, print error message and set metrics to
	zero. (#3927, Hans Breuer)
	(cairo_win32_scaled_font_select_font): Add detail on what API
	failed to the error messages.

2005-09-19  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that the clip-all test now passes.

2005-09-19  Carl Worth  <cworth@cworth.org>

	* src/cairo-xlib-surface.c: (_create_a8_picture): Avoid attempting
	to create a size-0 Pixmap, (to prevent the associated X
	error). This actually showed up when the clip region is
	empty. Thanks to Radek Doulík for the bug report.

	* test/Makefile.am:
	* test/clip-all.c: (main): Remove clip-all from the XFAIL list
	since it works now.

2005-09-19  Carl Worth  <cworth@cworth.org>

	Originally: 2005-09-19  Hans Breuer  <hans@breuer.org>

        * src/cairoint.h : win32 specific definitions for
	CAIRO_MUTEX_DECLARE, CAIRO_MUTEX_LOCK etc. [not based on win32
	mutex but critical sections]
	
        * src/cairo-win32-surface.c : add DllMain() to do global,
	single-threaded 'mutex' (de)initialization. No ifdefs needed, some
	variables would simply not be used when the respective backend
	would not be compiled in.

2005-09-19  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am (libcairo_la_SOURCES): Add cairo-cache-private.h
	which was missing from the list, (thanks to sunmoon1997).

2005-09-19  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that 4414 is now fixed.

2005-09-18  Billy Biggs  <vektor@dumbterm.net>
